# ICGL

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_ACTUAL.md  SYSTEM_COMPREHENSIVE_REPORT.md  __init__.py  calculator.py  cli.py  compose.debug.yaml  compose.yaml  config.yaml  create_gbe_adr.py  dashboard.py  debug_architect.py  debug_chat_ws.py  debug_secretary.py  debug_start.py  debug_ws.py  docker-compose.override.yml  docker-compose.yml  docs_tmp.html  duplicates_report.txt  fix-imports.ps1  governance_cycle.py  grand_roadmap_data.json  hello_builder.py  ingest_memory.py  main.py  mediator_audit_report.json  multilateral_review_data.json  openapi.json  openapi_tmp.json  package-lock.json  package.json  perf_result.txt  push_error_2.txt  push_error_3.txt  pyproject.toml  (+40 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
admin/: package-lock.json  vite.config.ts
adr/: ADR-CANONICAL-001.md  README.md  template.md
agents/: __init__.py  architect.py  archivist_agent.py  base.py  builder.py  chaos.py  development_manager.py  devops.py  documentation_agent.py  engineer.py  executive_agent.py  external_consultant.py  hr_agent.py  hr_proxy_agent.py  mediator.py  monitor_agent.py  policy.py  registry.py  secretary_agent.py  security_orchestrator.py  sentinel_agent.py
api/: capability_endpoints.py  dependencies.py  main.py  quick_code_endpoint.py  server.py  server_shared.py  simple_ui_server.py
backend/: .env.example  cli.py  observability.py
chat/: __init__.py  activity_log.txt  index.html  intent_parser.py  response_builder.py  script.js
committees/: conflict_resolution_committee.py
config/: eslint.config.base.js  otel.yaml  path_map.json  ruff.toml  tailwind.config.base.js  tsconfig.base.json
conversation/: __init__.py  clarification.py  composer.py  dispatcher.py  engine.py  entity_tracker.py  intent_decomposer.py  session.py
coordination/: __init__.py  idcp.py  router.py
core/: client.py  llm.py  observability.py  runtime_guard.py
docs/: API_REFERENCE.md  AcceptanceTests.md  CLI_REFERENCE.md  DEPARTMENTAL_DFDS.md  GM_PRIORITIES.md  Gap_Analysis_Report.md  Governed-Multi-Agent-Runtime.md  Human-Loop-(HDAL+UI).md  ICGL-Orchestrator-(End-to-End).md  INSTALLATION.md  Knowledge-Kernel-(KB+Schema+Store).md  Policy-Engine-(Hard-Gate).md  README.md  Root_Cause_Infrastructure_Blindness.md  STYLE_GUIDE.md  Sentinel-Engine-(Risk+Drift).md  Target_Topology.md  UNDERSTANDING.md  api_usage.md  architecture.md  capability_gap_governance.md  commands.md  icgl_knowledge_base_v1.md  manifesto.md  mock_inventory.md  prompt_templates.md  restructure-plan.md  roadmap.md  roadmap.md.resolved  runbook.md  service-catalog.md  suggested_skeleton.md  ui_agents_data_map.md  ui_agents_dev_requirements.md  ui_agents_task_plan.md  ui_agents_wireframe.md  windows_setup.md
governance/: __init__.py  governed_docs_refactor.py  icgl.py  procedure_engine.py
hdal/: cli_prompts.py  hdal.py
hr/: __init__.py  heartbeat.py  workforce_manager.py
kb/: __init__.py  knowledge_base.py  persistent.py  schemas.py  storage.py
libs/python/agents_core/: README.md  __init__.py  pyproject.toml
libs/python/knowledge_base/: README.md  __init__.py  pyproject.toml
libs/python/memory/: README.md  __init__.py  pyproject.toml
libs/python/observability/: README.md  __init__.py  pyproject.toml
memory/: qdrant_adapter.py
modules/: __init__.py
observability/: __init__.py  events.py  instrumentation.py  ledger.py  monitor_loop.py  patterns.py  slack_adapter.py
policies/: __init__.py  enforcement.py
runs/: run_0001_5bf1fbaf-73f6-4f75-8a8b-03e97dc6db04.json  run_0001_8bf14cc6-0c19-4154-a4cd-158c7bdc8cbc.json  run_0001_8ec7c240-65b5-490e-b37f-0680de6dcf7f.json  run_0001_ADR-CONC-0.json  run_0001_STRESS-001.json  run_0001_a1.json  run_0002_9d588fb1-2c40-43a2-95a7-b2af294e31f4.json  run_0002_ADR-CONC-1.json  run_0002_a2.json  run_0003_ADR-CONC-2.json  run_0003_e44dfad7-eb26-4f13-b580-8801873af048.json  run_0004_4091b134-3da6-4b49-87de-f87a6ab906fa.json  run_0004_ADR-CONC-3.json  run_0005_6f0b188f-4135-4056-b503-335b6b802b2e.json  run_0005_ADR-CONC-4.json  run_0006_c90a28bf-5216-4c09-a3a4-91b797fff30b.json
scripts/: activate_development_manager.py  activate_hr_department.py  activate_sovereign_monitor.py  audit_admin_governance.py  audit_agents.py  bootstrap.sh  check_openapi_schemas.py  dev.ps1  (+46 more)
(+1186 files in other folders)
