[tool.poetry]
name = "icgl"
version = "0.1.0"
description = "ICGL - Iterative Co-Governance Loop: A Governance-First Intelligence System"
authors = ["Bakheet <bakheet@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}, {include = "api"}]
[tool.poetry.extras]
dev = ["pytest", "black", "isort", "mypy"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
openai = "^1.12.0"
lancedb = "^0.26.1"
pyarrow = "^16.0.0"
pydantic = "^2.6.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icgl = "backend.main:main"
icgl-api = "api.server:main"
icgl-ui = "api.simple_ui_server:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I", "B", "S"]
ignore = ["D401"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
follow_imports = "normal"
