[tool.poetry]
name = "icgl-backend"
version = "0.1.0"
description = "ICGL Backend & API"
authors = ["ICGL Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.0"
python-multipart = "^0.0.12"
httpx = "^0.27.0"
# Add other dependencies as needed based on codebase imports

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.7.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "backend/tests", "ui/web/app/tests"]
