[project]
name = "icgl-agents-core"
version = "0.1.0"
description = "Agents core shim delegating to modules.agents during extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents_core*"]
