[project]
name = "icgl-observability"
version = "0.1.0"
description = "Observability shim delegating to modules.observability during migration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["observability*"]
